--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             fetchFreeServices();
-            setupGunSelector();
         });
 
         function fetchFreeServices() {
@@ -111,7 +110,7 @@
                         </div>
                     </div>
                     <div class="button-container">
-                        <button class="download-button" onclick="downloadFile('${service.file}')">Download File</button>
+                        <button class="download-button" onclick="downloadFile('${service.file}')" aria-label="Download ${service.name}">Download File</button>
                     </div>
                 `;
                 col.appendChild(section);
@@ -126,17 +125,6 @@
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
-        }
-
-            closeButton.addEventListener('click', () => {
-                modal.style.display = 'none';
-            });
-
-            window.addEventListener('click', (event) => {
-                if (event.target === modal) {
-                    modal.style.display = 'none';
-                }
-            });
         }
     </script>
 
