--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         function fetchFreeServices() {
             const freeServices = [
                 { name: "Cheat Engine 7.5", price: "FREE", image: "Website/cheatengine_logo_234.jpg", file: "https://mega.nz/folder/ZCkSGZrB#gTYt5WcEy5xU5nWqTHG1AQ" },
-                { name: "Combat Master ExoSwapper", price: "FREE", image: "Website/2024-08-09 21-40-51 - frame at 12m42s.jpg", file: "Website/ExoSwapper.ct" },
-                { name: "Combat Master Cheat Table", price: "FREE", image: "Website/Screenshot 2024-09-01 120040.jpg", file: "Website/CM_Ultimate.CT" },
-                { name: "SecHex-Spoofer", price: "FREE", image: "Website/newspoofericon.webp", file: "Website/SecHex-Spoofy V1.5.8.zip" },
+                { name: "Combat Master ExoSwapper - By @Exodia", price: "FREE", image: "Website/2024-08-09 21-40-51 - frame at 12m42s.jpg", file: "Website/ExoSwapper.ct" },
+                { name: "Combat Master Cheat Table - By @ZoDDeL", price: "FREE", image: "Website/Screenshot 2024-09-01 120040.jpg", file: "Website/CM_Ultimate.CT" },
+                { name: "SecHex-Spoofer - By SecHex", price: "FREE", image: "Website/newspoofericon.webp", file: "Website/SecHex-Spoofy V1.5.8.zip" },
                 { name: "Spotify Premium Tool", price: "FREE", image: "Website/open-graph-default.png", file: "Website/Spotify-Premium-Tool.exe" },
                 { name: "Windows Activation Tool", price: "FREE", image: "Website/microsoft_windows_10x_logo_glowing_blue_circuits_by_vchal_gettyimages-1186902469_2400x1600-100882265-large.webp", file: "Website/Windows-Activation-Tool.exe" }
             ];
