--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 { name: "Combat Master Cheat Table - By @ZoDDeL", price: "FREE", image: "Website/Screenshot 2024-09-01 120040.jpg", file: "Website/CM_Ultimate.CT" },
                 { name: "SecHex-Spoofer - By SecHex", price: "FREE", image: "Website/newspoofericon.webp", file: "Website/SecHex-Spoofy V1.5.8.zip" },
                 { name: "Spotify Premium Tool", price: "FREE", image: "Website/open-graph-default.png", file: "Website/Spotify-Premium-Tool.exe" },
-                { name: "Windows Activation Tool", price: "FREE", image: "Website/microsoft_windows_10x_logo_glowing_blue_circuits_by_vchal_gettyimages-1186902469_2400x1600-100882265-large.webp", file: "Website/Windows-Activation-Tool.exe" }
+                { name: "Windows Activation Tool", price: "FREE", image: "Website/microsoft_windows_10x_logo_glowing_blue_circuits_by_vchal_gettyimages-1186902469_2400x1600-100882265-large.webp", file: "Website/Windows-Activation-Tool.exe" },
+                { name: "Adobe Premiere Pro 25.0", price: "FREE", image: "https://i.postimg.cc/7YyShkct/5555872-e793-2-1024x576.jpg", file: "https://drive.google.com/file/d/1Rqn4ewYKwpNmXvas8KmTwyTCxHi0_rXh/view" }
             ];
             const freeServicesRow = document.getElementById('free-services-row');
             freeServices.forEach(service => {
