--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
         function fetchFreeServices() {
             const freeServices = [
+                { name: "Combat Master Internal Menu - By XanomalyX", price: "FREE", image: "https://i.postimg.cc/sgZ9T6YZ/final.jpg", file: "https://mega.nz/folder/YSkwUbqQ#4WdFb-Wlv_oq0sQULzg4ig" },
                 { name: "Cheat Engine 7.5", price: "FREE", image: "Website/cheatengine_logo_234.jpg", file: "https://mega.nz/folder/ZCkSGZrB#gTYt5WcEy5xU5nWqTHG1AQ" },
                 { name: "Combat Master ExoSwapper - By @Exodia", price: "FREE", image: "Website/2024-08-09 21-40-51 - frame at 12m42s.jpg", file: "Website/ExoSwapper.ct" },
                 { name: "Combat Master Cheat Table - By @ZoDDeL", price: "FREE", image: "Website/Screenshot 2024-09-01 120040.jpg", file: "Website/CM_Ultimate.CT" },
