--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                         <div class="button-container">
-                            <a href="https://moealturej.bgng.io/" class="shop-link">Go to Shop</a>
+                            <a href="https://moealturej.mysellauth.com" class="shop-link">Go to Shop</a>
                         </div>
                     </div>
                 </div>
