--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <section id="contact" class="contact-section">
         <h2>Get In Touch</h2>
-        <p>Feel free to join the discord server and create a support ticket for help! For other inquiries, you can contact me at <a href="mailto:moealturej@gmail.com">moealturej@gmail.com</a></p>
+        <p>Feel free to join the discord server and create a support ticket for help! For other inquiries, you can contact me at <a href="mailto:support@moealturej.com">support@moealturej.com</a></p>
     </section>
 
     <footer>
