--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Moealturej Services">
     <meta property="og:description" content="Explore our premium services and tools for gamers worldwide. Unlock better tools, cheats, and more!">
     <meta property="og:image" content="https://i.postimg.cc/zXcgY7k9/standard-4.gif"> <!-- Add your image URL -->
-    <meta property="og:url" content="https://moealturej.github.io/moealturej">
+    <meta property="og:url" content="https://www.moealturej.com">
 
     <!-- Twitter Card for social media -->
     <meta name="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Canonical link to avoid duplicate content issues -->
-    <link rel="canonical" href="https://moealturej.github.io/moealturej">
+    <link rel="canonical" href="https://www.moealturej.com">
     
     <!-- Favicon -->
     <link rel="icon" href="https://i.postimg.cc/13VNmFC4/channels4-profile.jpg" type="image/jpg">
@@ -115,7 +115,7 @@
 
     <section id="contact" class="contact-section">
         <h2>Get In Touch</h2>
-        <p>Feel free to join the discord server and create a support ticket for help! For other inquiries, you can contact me at <a href="mailto:support@moealturej.com">support@moealturej.com</a></p>
+        <p>Feel free to join the discord server and create a support ticket for help! For other inquiries, you can contact me at <a href="mailto:sales@moealturej.com">sales@moealturej.com</a></p>
     </section>
 
     <footer>
