--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="canonical" href="https://www.moealturej.com">
     
     <!-- Favicon -->
-    <link rel="icon" href="https://i.postimg.cc/htk7sBjD/New-logo.png" type="image/jpg">
+    <link rel="icon" href="https://i.postimg.cc/mDCx97nZ/New-logo.jpg" type="image/jpg">
 </head>
 <body>
     <header>
