--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Moealturej Services - Professional gaming tools and premium software">
+    <meta name="description" content="moealturej services - Professional gaming tools and premium software">
     <meta name="author" content="moealturej">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -18,11 +18,14 @@
     <meta property="og:url" content="https://www.moealturej.com">
     <meta name="twitter:card" content="summary_large_image">
 
-    <title>Moealturej Services - Premium Tools</title>
+    <meta charset="UTF-8">
+
+    <title>moealturej services - Premium Tools</title>
     
     <!-- Fonts and Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="https://i.postimg.cc/mDCx97nZ/New-logo.jpg" type="image/x-icon">
 
     <!-- Integrated Styles -->
     <style>
