--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Moealturej Services - Professional gaming tools and premium software">
+    <meta name="description" content="moealturej services - Professional gaming tools and premium software">
     <meta name="author" content="moealturej">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -207,7 +207,7 @@
     </section>
 
     <footer>
-    <p>&copy; 2024 Moealturej Services. All rights reserved</p>
+    <p>&copy; 2025 moealturej services. All rights reserved</p>
     <div class="socials">
         <a href="javascript:void(0)" onclick="openModal('privacyModal')">
             <i class="fas fa-shield-alt"></i>
