--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
+
+            <!-- Adobe Photoshop -->
+            <div class="card">
+                <img src="https://i.postimg.cc/QC7149hM/adobe-photoshop-hero-2.avif" alt="Premiere Pro">
+                <h3>Adobe Photoshop 26.2</h3>
+                <a href="https://drive.google.com/uc?export=download&id=1gjONiyKh-abuva82ceV0F2YC-DZIl5-A" class="btn" target="_blank">
+                    <i class="fas fa-download"></i> DOWNLOAD
+                </a>
+            </div>
         </div>
     </section>
             <!-- Other tools... -->
@@ -198,7 +207,7 @@
     </section>
 
     <footer>
-    <p>&copy; 2025 moealturej services. All rights reserved</p>
+    <p>&copy; 2025 moealturej services | All rights reserved</p>
     <div class="socials">
         <a href="javascript:void(0)" onclick="openModal('privacyModal')">
             <i class="fas fa-shield-alt"></i>
