--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="card">
                 <img src="https://i.postimg.cc/7YyShkct/5555872-e793-2-1024x576.jpg" alt="Premiere Pro">
                 <h3>Adobe Premiere Pro 25.0</h3>
-                <a href="https://drive.google.com/file/d/1Rqn4ewYKwpNmXvas8KmTwyTCxHi0_rXh/view" class="btn" target="_blank">
+                <a href="https://drive.google.com/uc?export=download&id=1Rqn4ewYKwpNmXvas8KmTwyTCxHi0_rXh" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
