--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
     <section class="services" id="tools">
         <div class="grid">
             <!-- Combat Master Internal Menu -->
-            <div class="card">
+            <div class="card on-hold">
                 <img src="https://i.postimg.cc/sgZ9T6YZ/final.jpg" alt="Combat Master Menu">
                 <h3>Combat Master Internal Menu</h3>
-                <a href="https://mega.nz/folder/YSkwUbqQ#4WdFb-Wlv_oq0sQULzg4ig" class="btn" target="_blank">
-                    <i class="fas fa-download"></i> DOWNLOAD
-                </a>
+                <button class="btn disabled" disabled>
+                    <i class="fas fa-ban"></i> ON HOLD
+                </button>
             </div>
 
             <!-- Cheat Engine 7.5 -->
@@ -127,21 +127,21 @@
                 </a>
             </div>
             <!-- Combat Master ExoSwapper -->
-            <div class="card">
+            <div class="card on-hold">
                 <img src="Website/2024-08-09 21-40-51 - frame at 12m42s.jpg" alt="ExoSwapper">
                 <h3>Combat Master ExoSwapper</h3>
-                <a href="Website/ExoSwapper.ct" class="btn">
-                    <i class="fas fa-download"></i> DOWNLOAD
-                </a>
+                  <button class="btn disabled" disabled>
+                    <i class="fas fa-ban"></i> ON HOLD
+                </button>
             </div>
 
             <!-- Combat Master Cheat Table -->
-            <div class="card">
+            <div class="card on-hold">
                 <img src="Website/Screenshot 2024-09-01 120040.jpg" alt="Cheat Table">
                 <h3>Combat Master Cheat Table</h3>
-                <a href="Website/CM_Ultimate.CT" class="btn">
-                    <i class="fas fa-download"></i> DOWNLOAD
-                </a>
+                <button class="btn disabled" disabled>
+                    <i class="fas fa-ban"></i> ON HOLD
+                </button>
             </div>
 
             <!-- SecHex-Spoofer -->
