--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
             </div>
 
             <!-- Combat Master Cheat Table -->
-            <div class="card on-hold">
+            <div class="card">
                 <img src="Website/Screenshot 2024-09-01 120040.jpg" alt="Cheat Table">
                 <h3>Combat Master Cheat Table</h3>
-                <button class="btn disabled" disabled>
+                <a href="https://github.com/ZoDDeL/CM-Ultimate/releases/download/0.22.12_05.feb.25/CM.Ultimate.0.22.12._.05.feb.25.zip" class="btn" target="_blank">
                     <i class="fas fa-ban"></i> ON HOLD
                 </button>
             </div>
