--- a/index.html
+++ b/index.html
@@ -140,10 +140,9 @@
                 <img src="Website/Screenshot 2024-09-01 120040.jpg" alt="Cheat Table">
                 <h3>Combat Master Cheat Table</h3>
                 <a href="https://github.com/ZoDDeL/CM-Ultimate/releases/download/0.22.12_05.feb.25/CM.Ultimate.0.22.12._.05.feb.25.zip" class="btn" target="_blank">
-                    <i class="fas fa-ban"></i> ON HOLD
-                </button>
+                    <i class="fas fa-download"></i> DOWNLOAD
+                </a>
             </div>
-
             <!-- SecHex-Spoofer -->
             <div class="card">
                 <img src="Website/newspoofericon.webp" alt="Spoofer">
