--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
             <!-- Combat Master Cheat Table -->
             <div class="card">
-                <img src="Website/Screenshot 2024-09-01 120040.jpg" alt="Cheat Table">
+                <img src="https://i.postimg.cc/kXpQ1RWP/Combat-Master-CM-ULTIMATE.jpg" alt="Cheat Table">
                 <h3>Combat Master Cheat Table</h3>
-                <a href="https://github.com/ZoDDeL/CM-Ultimate/releases/download/0.22.12_05.feb.25/CM.Ultimate.0.22.12._.05.feb.25.zip" class="btn" target="_blank">
+                <a href="https://github.com/ZoDDeL/CM-Ultimate/releases/download/0.22.12_06.feb.25/CM.Ultimate.0.22.12._.06.feb.25.zip" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
