--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <h2>moealturej services</h2>
         </div>
         <ul class="nav-links">
+            <li><a href="https://www.moealturej.com/status">Status</a></li>
             <li><a href="#tools">Tools</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="https://moealturej.mysellauth.com" target="_blank" class="btn">Premium Store</a></li>
