--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta charset="UTF-8">
 
-    <title>Moealturej Services - Premium Tools</title>
+    <title>moealturej services - Premium Tools</title>
     
     <!-- Fonts and Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
