--- a/donate/index.html
+++ b/donate/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="moealturej services - Donation Page">
-    <meta name="author" content="Tools Status">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-
-    <!-- Open Graph / Twitter -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="moealturej services Donation">
-    <meta property="og:description" content="Professional gaming tools and premium software Status">
-    <meta property="og:image" content="https://i.postimg.cc/zXcgY7k9/standard-4.gif">
-    <meta property="og:url" content="https://www.moealturej.com/donate">
-    <meta name="twitter:card" content="summary_large_image">
-
     <title>Support moealturej - Donations</title>
-
-    <!-- Fonts and Icons -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" href="https://i.postimg.cc/mDCx97nZ/New-logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
