--- a/donate/index.html
+++ b/donate/index.html
@@ -32,13 +32,13 @@
         <h1>Support moealturej services</h1>
         <p>
             We are committed to providing free, high-quality services for everyone.  
-            Running and improving these services requires resources, and your support makes a huge difference.  
+            Running and improving these services requires resources; your support makes a huge difference.  
         </p>
 
         <div class="donation-info">
             <ul>
                 <li>Keep our services running smoothly by covering hosting & maintenance costs.</li>
-                <li>Ensure moealturej services remains free and accessible for everyone.</li>
+                <li>Ensure moealturej services remain free and accessible for everyone.</li>
                 <li>Help fund future improvements, new features and better performance.</li>
             </ul>
         </div>
@@ -56,7 +56,7 @@
         </div>
 
         <div class="donation-button">
-            <a href="https://www.paypal.com/donate/?business=3N5JTW6SEY5SL" class="btn">
+            <a href="https://www.paypal.com/donate/?business=3N5JTW6SEY5SL&currency_code=USD" class="btn">
                 <i class="fa-brands fa-paypal"></i> Donate via PayPal
             </a>
         </div>
