--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="hero-content">
             <h1>Boost your Gaming Experience</h1>
             <p>Professional tools and premium software for demanding users</p>
-            <a href="#tools" class="btn" style="margin-top: 2rem;">
-                <i class="fas fa-arrow-down"></i> see tools
+            <a href="https://moealturej.mysellauth.com/" class="btn" style="margin-top: 2rem;" target="_blank">
+                <i class="fas fa-arrow-down"></i> PREMIUM STORE
             </a>
         </div>
     </section>
