--- a/status/index.html
+++ b/status/index.html
@@ -42,19 +42,19 @@
 
     <div class="status-list">
       <div class="status-item">
-        <span class="status-dot working"></span>
-        <p>Cheat Engine 7.5</p>
-        <span class="status-text blue">Working</span>
-      </div>
-      <div class="status-item">
-        <span class="status-dot down"></span>
-        <p>Combat Master ExoSwapper</p>
-        <span class="status-text red">Out Dated</span>
+        <span class="status-dot up"></span>
+        <p>Combat Master Battle Pass Unlocker</p>
+        <span class="status-text green">Undetected</span>
       </div>
       <div class="status-item">
         <span class="status-dot up"></span>
         <p>Combat Master Cheat Table</p>
         <span class="status-text green">Undetected</span>
+      </div>
+      <div class="status-item">
+        <span class="status-dot working"></span>
+        <p>Cheat Engine 7.5</p>
+        <span class="status-text blue">Working</span>
       </div>
       <div class="status-item">
         <span class="status-dot working"></span>
