--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h3>4. Updates to this Policy</h3>
             <p>We reserve the right to update this Privacy Policy at any time. Any changes will be posted directly on this page with a new "Last updated" date.</p>
             
-            <p>If you have any questions or concerns, contact us at <a href="mailto:support@moealturej.com">support@moealturej.com</a>.</p>
+            <p>If you have any questions or concerns, contact us at <a href="mailto:sales@moealturej.com">support@moealturej.com</a>.</p>
         </div>
     </div>
 </div>
