--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!-- Open Graph / Twitter -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="moealturej services">
-    <meta property="og:description" content="Professional gaming tools and premium software">
-    <meta property="og:image" content="https://i.postimg.cc/zXcgY7k9/standard-4.gif">
+    <meta property="og:description" content="Looking for the best cheats, tools, and services? We've got you covered! Our top-quality solutions are designed to help you stay ahead, whether you're gaming or just need reliable tools that work. Trusted by thousands, we’re here to make things easier and more fun for you!">
+    <meta property="og:image" content="https://i.postimg.cc/6qYr02X0/standard11.gif">
     <meta property="og:url" content="https://www.moealturej.com">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_small_image">
 
     <meta charset="UTF-8">
 
