--- a/index.html
+++ b/index.html
@@ -171,11 +171,20 @@
                 </a>
             </div>
 
-            <!-- Adobe Photoshop -->
+                        <!-- Adobe Photoshop -->
             <div class="card">
                 <img src="https://i.postimg.cc/QC7149hM/adobe-photoshop-hero-2.avif" alt="Premiere Pro">
                 <h3>Adobe Photoshop 26.2</h3>
                 <a href="https://drive.google.com/uc?export=download&id=1gjONiyKh-abuva82ceV0F2YC-DZIl5-A" class="btn" target="_blank">
+                    <i class="fas fa-download"></i> DOWNLOAD
+                </a>
+            </div>
+
+            <!-- Wallpaper Engine -->
+            <div class="card">
+                <img src="https://i.postimg.cc/L4VCvpNs/capsule-616x353.jpg" alt="Wallpaper Engine">
+                <h3>Wallpaper Engine</h3>
+                <a href="https://mega.nz/folder/sK9iDSrR#HaeRK1pIfPZFEfcoirtooA" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
