--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <a href="https://discord.gg/moealturej" target="_blank"><i class="fab fa-discord"></i></a>
             <a href="https://youtube.com/@moealturej" target="_blank"><i class="fab fa-youtube"></i></a>
             <a href="https://tiktok.com/@moealturej" target="_blank"><i class="fab fa-tiktok"></i></a>
-            <a href="mailto:sales@moealturej.com"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:moealturej.com.com"><i class="fas fa-envelope"></i></a>
         </div>
     </section>
 
