--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="card on-hold">
                 <img src="https://i.postimg.cc/Z5R7LMkF/CM-Free-Battle-Pass.jpg" alt="CM BP Unlocker">
                 <h3>Combat Master Battle Pass Unlocker</h3>
-                <a href="https://mega.nz/file/FLcnQYIS#ge0QhbmLgk0jAPr3uZ5w5p3FL1xaBx7ZYMNFbvnWLF4" class="btn" target="_blank">
+                <a href="https://lootdest.org/s?rYVwZgpX" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -123,7 +123,7 @@
             <div class="card">
                 <img src="https://i.postimg.cc/kXpQ1RWP/Combat-Master-CM-ULTIMATE.jpg" alt="Cheat Table">
                 <h3>Combat Master Cheat Table</h3>
-                <a href="https://github.com/ZoDDeL/CM-Ultimate/releases/download/0.22.12_09.feb.25/CM.Ultimate.0.22.12._.09.feb.25.zip" class="btn" target="_blank">
+                <a href="https://loot-link.com/s?sK5yakbj" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -131,7 +131,7 @@
             <div class="card">
                 <img src="Website/cheatengine_logo_234.jpg" alt="Cheat Engine">
                 <h3>Cheat Engine 7.5</h3>
-                <a href="https://mega.nz/folder/ZCkSGZrB#gTYt5WcEy5xU5nWqTHG1AQ" class="btn" target="_blank">
+                <a href="https://lootdest.org/s?XtFpMbj1" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -139,7 +139,7 @@
             <div class="card">
                 <img src="Website/newspoofericon.webp" alt="Spoofer">
                 <h3>SecHex - Spoofer</h3>
-                <a href="Website/SecHex-Spoofy V1.5.8.zip" class="btn">
+                <a href="https://loot-link.com/s?OB5UdI5o" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -148,7 +148,7 @@
             <div class="card">
                 <img src="Website/open-graph-default.png" alt="Spotify">
                 <h3>Spotify Premium Tool</h3>
-                <a href="Website/Spotify-Premium-Tool.exe" class="btn">
+                <a href="https://lootdest.org/s?qzbnw6Jc" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -157,7 +157,7 @@
             <div class="card">
                 <img src="Website/microsoft_windows_10x_logo_glowing_blue_circuits_by_vchal_gettyimages-1186902469_2400x1600-100882265-large.webp" alt="Windows">
                 <h3>Windows Activation Tool</h3>
-                <a href="Website/Windows_Activation_Tool.exe" class="btn">
+                <a href="https://lootdest.org/s?LpHUcoLR" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -166,7 +166,7 @@
             <div class="card">
                 <img src="https://i.postimg.cc/7YyShkct/5555872-e793-2-1024x576.jpg" alt="Premiere Pro">
                 <h3>Adobe Premiere Pro 25.0</h3>
-                <a href="https://drive.google.com/uc?export=download&id=1Rqn4ewYKwpNmXvas8KmTwyTCxHi0_rXh" class="btn" target="_blank">
+                <a href="https://loot-link.com/s?SAkN9Sg5" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -175,7 +175,7 @@
             <div class="card">
                 <img src="https://i.postimg.cc/QC7149hM/adobe-photoshop-hero-2.avif" alt="Premiere Pro">
                 <h3>Adobe Photoshop 26.2</h3>
-                <a href="https://drive.google.com/uc?export=download&id=1gjONiyKh-abuva82ceV0F2YC-DZIl5-A" class="btn" target="_blank">
+                <a href="https://loot-link.com/s?2oIeXb1V" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
@@ -184,7 +184,7 @@
             <div class="card">
                 <img src="https://i.postimg.cc/L4VCvpNs/capsule-616x353.jpg" alt="Wallpaper Engine">
                 <h3>Wallpaper Engine</h3>
-                <a href="https://mega.nz/folder/sK9iDSrR#HaeRK1pIfPZFEfcoirtooA" class="btn" target="_blank">
+                <a href="https://lootdest.org/s?Q1SnPWVA" class="btn" target="_blank">
                     <i class="fas fa-download"></i> DOWNLOAD
                 </a>
             </div>
