--- a/donate/index.html
+++ b/donate/index.html
@@ -28,20 +28,20 @@
 </head>
 <body>
 
-    <section class="donate-section">
-        <h1>Support moealturej services</h1>
-        <p>
-            We are committed to providing free, high-quality services for everyone.  
-            Running and improving these services requires resources; your support makes a huge difference.  
-        </p>
+<section class="donate-section">
+    <h1>Support moealturej services</h1>
+    <p>
+        Due to increasing maintenance and hosting costs, we've decided to introduce link tasks and ads to help fund the website.  
+        This allows us to continue offering free, high-quality services without compromising on performance or accessibility.
+    </p>
 
-        <div class="donation-info">
-            <ul>
-                <li>Keep our services running smoothly by covering hosting & maintenance costs.</li>
-                <li>Ensure moealturej services remain free and accessible for everyone.</li>
-                <li>Help fund future improvements, new features and better performance.</li>
-            </ul>
-        </div>
+    <div class="donation-info">
+        <ul>
+            <li>Help cover essential hosting and maintenance expenses.</li>
+            <li>Ensure moealturej services remain free and accessible for everyone.</li>
+            <li>Support future updates, new features, and improved performance.</li>
+        </ul>
+    </div>
 
         <p>
             Every donation, big or small, helps us continue providing the best experience possible.  
