--- a/status/index.html
+++ b/status/index.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="https://i.postimg.cc/mDCx97nZ/New-logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -47,9 +47,9 @@
         <span class="status-text green">Undetected</span>
       </div>
       <div class="status-item">
-        <span class="status-dot up"></span>
+        <span class="status-dot updating"></span>
         <p>Combat Master Cheat Table</p>
-        <span class="status-text green">Undetected</span>
+        <span class="status-text yellow">Updating</span>
       </div>
       <div class="status-item">
         <span class="status-dot working"></span>
